--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="card">
-  <div class="image">
-    <img src="illustration-hero.svg" alt="illustration">
-  </div>
-  <div class="order-info">
-    <div class="order-summary">
-      <h1>Order Summary</h1>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-    </div>
-    <div class="plan">
-      <div class="icon-planbox">
-        <img src="icon-music.svg" alt="">
-        <div class="annual-plan-box">
-          <h3>Annual Plan</h3>
-          <p>$59.99/year</p>
+  <main>
+    <div class="card">
+      <header>
+        <div class="image">
+          <img src="illustration-hero.svg" alt="illustration">
         </div>
+    </header>
+      <div class="order-info">
+        <div class="order-summary">
+          <h1>Order Summary</h1>
+          <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+        </div>
+        <div class="plan">
+          <div class="icon-planbox">
+            <img src="icon-music.svg" alt="">
+            <div class="annual-plan-box">
+              <h2>Annual Plan</h2>
+              <p>$59.99/year</p>
+            </div>
+        </div>
+          <a href="#">Change</a>
+        </div>
+        <div class="submit">
+          <button type="submit">Proceed to Payment</button>
+          <a href="#">Cancel Order</a>
+        </div>
+      </div>
     </div>
-      <a href="#">Change</a>
-    </div>
-    <div class="submit">
-      <button type="submit">Proceed to Payment</button>
-      <a href="#">Cancel Order</a>
-    </div>
-  </div>
-</div>
+  </main>
 </body>
 </html>
